--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@supabase/supabase-js": "^2.58.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.0",
-    "vite": "^4.4.9"
+    "vite": "^7.1.7"
   }
 }
