--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
