--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
+    "nodemailer": "^7.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
